# symmetry

./: .gitignore  CMakeLists.txt  main.cpp  types.hpp
